# ff26

./: ASSETS.md  CLAUDE.md  CONTEXT.md  README.md  main.py  pyproject.toml
ff/: .gitignore  pyproject.toml
ff/assets/: feature_sweep_16.json  wr_feature_family_backtest_26.json
ff/notebooks/: build_notebook.py  build_notebook_v2.py  build_notebook_wr_feature_engineering.py  rf_wr_training.ipynb  v1_deliverable.ipynb  v2_deliverable.ipynb  wr_feature_engineering.ipynb
ff/notebooks/.ipynb_checkpoints/: rf_wr_training-checkpoint.ipynb  (+1 more)
ff/output/: backtest_QB.csv  backtest_RB.csv  backtest_TE.csv  backtest_WR.csv  backtest_report.json  backtest_report_v2.json  multi_season_sweep.json  v1_projections.csv  v2_projections.csv
ff/scripts/: build_v2_deliverable.py  feature_family_sweep.py  migrate_nflverse_cache.py  player_report.py  warm_nflverse_cache.py  wr_feature_family_backtest_26.py
ff/tests/: test_adp.py  test_age_buckets.py  test_api.py  test_backtest.py  test_backtest_report.py  test_data_availability.py  test_depth_chart.py  test_disagreement_edge.py  test_evaluation.py  test_experience_features.py  test_feature_audit.py  test_feature_cache.py  test_features.py  test_games_played.py  test_naive_baseline.py  test_nflverse.py  test_opportunity_vacuum.py  test_per_touch_efficiency.py  test_pipeline.py  test_player_report.py  test_position_model.py  test_quantile_model.py  test_rb_model.py  test_rf_model.py  test_run_backtest.py  test_scoring.py  test_strength_of_schedule.py  test_tabfm_model.py  test_team_offensive_environment.py  test_tiers.py  test_veterans.py
(+63 files in other folders)
