[project]
name = "ff-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hanan", email = "hyshandler@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "ipykernel>=7.3.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "nfl-data-py>=0.3.2",
    "pandas>=2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "tabpfn>=8.0.8",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
markers = [
    "network: tests that hit the real nflverse data source or download TabFM model weights",
]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "nfl_data_py"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tabpfn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "appdirs"
ignore_missing_imports = true
